[package]
name = "lf2_codec"
version = "0.2.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
description = "Encodes and decodes Little Fighter 2 (LF2) data files"
documentation = "https://docs.rs/lf2_codec"
edition = "2018"
homepage = "https://github.com/azriel91/lf2_codec"
keywords = ["lf2"]
license = "Zlib"
maintenance = { status = "passively-maintained" }
readme = "README.md"
repository = "https://github.com/azriel91/lf2_codec"
